--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
+# IntelliJ
 *.iml
-.gradle
-/local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+.idea/
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
